--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.3.2",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
+    "react-spring": "^9.7.3",
+    "react-spring-3d-carousel": "^1.3.4",
+    "react-transition-group": "^4.4.5",
     "react-use-draggable-scroll": "^0.4.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
