--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "animate.css": "^4.1.1",
     "animejs": "^3.2.2",
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
