--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-use-draggable-scroll": "^0.4.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
