--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-use-draggable-scroll": "^0.4.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
+    "typeit-react": "^2.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
