--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animejs": "^3.2.2",
     "aos": "^2.3.4",
     "framer-motion": "^10.16.14",
+    "gsap": "^3.12.4",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
